--- a/noah.html
+++ b/noah.html
@@ -61,6 +61,7 @@
 				<h2 class="projectpage__sub-title">Сторінки:</h2>
 				<ul class="projectpage__list">
 					
+<li><a target="_blank" href="tours.html">tours</a></li>
 <li><a target="_blank" href="index.html">index</a></li>
 				</ul>
 			</main>
