--- a/noah.html
+++ b/noah.html
@@ -75,6 +75,8 @@
 			<ol class="projectpage__list">
 				
 <li><a target="_blank" href="tours.html">tours</a></li>
+<li><a target="_blank" href="tours-sub.html">tours-sub</a></li>
+<li><a target="_blank" href="tour.html">tour</a></li>
 <li><a target="_blank" href="index.html">index</a></li>
 			</ol>
 		</main>
