--- a/tour.html
+++ b/tour.html
@@ -432,233 +432,40 @@
 				</div>
 			</header>
 			<main class="page">
-				<div class="page__tours tours">
-					<section class="tours__hero hero-tours">
-						<img alt="Image" class="hero-tours__bg" src="./assets/img/tours/hero.webp">
-						<div class="hero-tours__body">
-							<h1 class="hero-tours__title">Private Group Tours</h1>
-							<div class="hero-tours__subtitle tours-title">A Spiritual Journey</div>
+				<div class="page__tour tour">
+					<section class="tour hero-tour">
+						<img alt="Image" class="hero-tour__bg" src="./assets/img/tour/hero.webp">
+						<div class="hero-tour__container">
+							<h1 class="hero-tour__title">THE BEST OF ISRAEL</h1>
+							<div class="hero-tour__subtitle">A TIME TO EXPLORE THE ANCIENT WONDERS</div>
 						</div>
 					</section>
-					<div class="tours__breadcrumbs breadcrumbs">
+					<div class="tour__breadcrumbs breadcrumbs">
 						<div class="breadcrumbs__container">
 							<ul>
 								<li>
 									<a href="#">Home</a>
 								</li>
 								<li>
-									<a href="#">Joining a Group Tour Our Categories</a>
+									<a href="#">Joining a group Tour</a>
+								</li>
+								<li>
+									<a href="#">Israel Tour Packages</a>
+								</li>
+								<li>
+									<a href="#">Best of Israel 9 Day Group Tour</a>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="tours__body">
-						<div class="tours__container">
-							<div class="tours__header">
-								<h2 class="tours__title tours-title">Our Categories</h2>
-								<div class="tours__subtitle">Choose from one of our Categories to start your journey</div>
+					<div class="tour__main main-tour">
+						<div class="main-tour__container">
+							<h2 class="main-tour__title">JOINING A GROUP TOUR</h2>
+							<h3 class="main-tour__subtitle">BEST OF ISRAEL 9 DAY GROUP TOUR</h3>
+							<div class="main-tour__text">
+								Limited to 18 participants | Discover a land held sacred by three faiths, from Jerusalem to Nazareth, on a
+          comprehensive journey that reveals the complex history of the land, its people and sacred sites.
 							</div>
-							<div class="tours__items">
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel with Jordan
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel , Jordan, Egypt
-												<br>
-												Joininga Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/04.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Luxury Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/05.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Single Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Senior Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel Private Jewish
-												<br>
-												Heritage
-                  Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel Private
-												<br>
-												Group Tour
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel with Jordan
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel , Jordan and Egypt
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__banner">
-										<img alt="Image" src="./assets/img/tours/banner.webp">
-										<span>
-											See You
-											<br>
-											Soon!
-										</span>
-									</div>
-								</div>
-							</div>
-							<a href="#" class="tours__button button button--orange">Start Your Journey Now</a>
 						</div>
 					</div>
 				</div>
