--- a/tours-sub.html
+++ b/tours-sub.html
@@ -432,233 +432,203 @@
 				</div>
 			</header>
 			<main class="page">
-				<div class="page__tours tours">
-					<section class="tours__hero hero-tours">
-						<img alt="Image" class="hero-tours__bg" src="./assets/img/tours/hero.webp">
-						<div class="hero-tours__body">
-							<h1 class="hero-tours__title">Private Group Tours</h1>
-							<div class="hero-tours__subtitle tours-title">A Spiritual Journey</div>
+				<div class="page__tours-sub tours-sub">
+					<section class="tours-sub hero-tours-sub">
+						<img alt="Image" class="hero-tours-sub__bg" src="./assets/img/tour/hero.webp">
+						<div class="hero-tours-sub__body">
+							<h1 class="hero-tours-sub__title">
+								ISRAEL
+								<br>
+								LUXURY
+								<br>
+								PACKAGES
+							</h1>
+							<div class="hero-tours-sub__subtitle tours-title">
+								<span>THE COLLECTION</span>
+								A TIME TO EXPLORE THE ANCIENT WONDERS
+							</div>
 						</div>
 					</section>
-					<div class="tours__breadcrumbs breadcrumbs">
+					<div class="tours-sub__breadcrumbs breadcrumbs">
 						<div class="breadcrumbs__container">
 							<ul>
 								<li>
 									<a href="#">Home</a>
 								</li>
 								<li>
-									<a href="#">Joining a Group Tour Our Categories</a>
+									<a href="#">Joining a Group</a>
+								</li>
+								<li>
+									<a href="#">Israel Luxury Packages</a>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<div class="tours__body">
-						<div class="tours__container">
-							<div class="tours__header">
-								<h2 class="tours__title tours-title">Our Categories</h2>
-								<div class="tours__subtitle">Choose from one of our Categories to start your journey</div>
-							</div>
-							<div class="tours__items">
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel with Jordan
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel , Jordan, Egypt
-												<br>
-												Joininga Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/04.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Luxury Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/05.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Single Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel Joining Small
-												<br>
-												Group Senior Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel Private Jewish
-												<br>
-												Heritage
-                  Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/01.webp">
-											<h3 class="item-tours__title">
-												Israel Private
-												<br>
-												Group Tour
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/02.webp">
-											<h3 class="item-tours__title">
-												Israel with Jordan
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__item item-tours">
-										<a href="#" class="item-tours__image">
-											<img alt="Image" src="./assets/img/tours/03.webp">
-											<h3 class="item-tours__title">
-												Israel , Jordan and Egypt
-												<br>
-												Joining a Group Tours
-											</h3>
-										</a>
-										<div class="item-tours__body">
-											<h4 class="item-tours__subtitle">Exclusive, Customized Group Tour</h4>
-											<p class="item-tours__text">Small group travel Exprerience with a group a led by Noah Tours</p>
-											<a href="#" class="item-tours__link">Read More ></a>
-										</div>
-									</div>
-								</div>
-								<div class="tours__col">
-									<div class="tours__banner">
-										<img alt="Image" src="./assets/img/tours/banner.webp">
-										<span>
-											See You
-											<br>
-											Soon!
-										</span>
-									</div>
+					<div class="tours-sub__body">
+						<div class="tours-sub__container">
+							<div class="tours-sub__header">
+								<h2 class="tours-sub__title">JOINING A GROUP - NOAH TOURS ISRAEL COLLECTION</h2>
+								<div class="tours-sub__subtitle">
+									Your watch and strap should go together perfectly, but that doesn't mean you can't experiment with different
+            combinations. Why not mix things
 								</div>
 							</div>
-							<a href="#" class="tours__button button button--orange">Start Your Journey Now</a>
+							<div data-fls-spoilers="768, max" class="tours-sub__content">
+								<div class="tours-sub__items">
+									<div class="tours-sub__item item-tours-sub">
+										<a href="#" class="item-tours-sub__image">
+											<img class="ibg" alt="Image" src="./assets/img/tours/sub/item.webp">
+										</a>
+										<div class="item-tours-sub__body">
+											<h3 class="item-tours-sub__title">
+												<a href="#">The Best of Israel 7 days</a>
+											</h3>
+											<div class="item-tours-sub__text">
+												<p>
+													<b>
+														7 Days & 8 Nights | Starting every sunday
+                      The group is limited to 18 people only!
+													</b>
+												</p>
+												<p>
+													A tour in Israel for all faiths. Is is opening a window over Israel’s past and present history, its
+                    people
+												</p>
+												<a href="#">Contact us for our latest offer!</a>
+											</div>
+										</div>
+										<div class="item-tours-sub__actions">
+											<div class="item-tours-sub__price">
+												Starting from USD
+												<span>$ 2,499</span>
+											</div>
+											<a href="#" class="item-tours-sub__button button button--blue">
+												Discover
+												<span class="pc">Now!</span>
+											</a>
+										</div>
+									</div>
+									<div class="tours-sub__item item-tours-sub">
+										<a href="#" class="item-tours-sub__image">
+											<img class="ibg" alt="Image" src="./assets/img/tours/sub/item.webp">
+										</a>
+										<div class="item-tours-sub__body">
+											<h3 class="item-tours-sub__title">
+												<a href="#">The Best of Israel 8 days</a>
+											</h3>
+											<div class="item-tours-sub__text">
+												<p>
+													<b>
+														8 Days & 9 Nights | Starting every sunday
+                      The group is limited to 18 people only!
+													</b>
+												</p>
+												<p>
+													A tour in Israel for all faiths. Is is opening a window over Israel’s past and present history, its
+                    people
+												</p>
+												<a href="#">Contact us for our latest offer!</a>
+											</div>
+										</div>
+										<div class="item-tours-sub__actions">
+											<div class="item-tours-sub__price">
+												Starting from USD
+												<span>$ 3,499</span>
+											</div>
+											<a href="#" class="item-tours-sub__button button button--blue">
+												Discover
+												<span class="pc">Now!</span>
+											</a>
+										</div>
+									</div>
+									<div class="tours-sub__item item-tours-sub">
+										<a href="#" class="item-tours-sub__image">
+											<img class="ibg" alt="Image" src="./assets/img/tours/sub/item.webp">
+										</a>
+										<div class="item-tours-sub__body">
+											<h3 class="item-tours-sub__title">
+												<a href="#">The Best of Israel 9 days</a>
+											</h3>
+											<div class="item-tours-sub__text">
+												<p>
+													<b>
+														9 Days & 10 Nights | Starting every sunday
+                      The group is limited to 18 people only!
+													</b>
+												</p>
+												<p>
+													A tour in Israel for all faiths. Is is opening a window over Israel’s past and present history, its
+                    people
+												</p>
+												<a href="#">Contact us for our latest offer!</a>
+											</div>
+										</div>
+										<div class="item-tours-sub__actions">
+											<div class="item-tours-sub__price">
+												Starting from USD
+												<span>$ 4,499</span>
+											</div>
+											<a href="#" class="item-tours-sub__button button button--blue">
+												Discover
+												<span class="pc">Now!</span>
+											</a>
+										</div>
+									</div>
+									<div class="tours-sub__item item-tours-sub">
+										<a href="#" class="item-tours-sub__image">
+											<img class="ibg" alt="Image" src="./assets/img/tours/sub/item.webp">
+										</a>
+										<div class="item-tours-sub__body">
+											<h3 class="item-tours-sub__title">
+												<a href="#">The Best of Israel 10 days</a>
+											</h3>
+											<div class="item-tours-sub__text">
+												<p>
+													<b>
+														9 Days & 10 Nights | Starting every sunday
+                      The group is limited to 18 people only!
+													</b>
+												</p>
+												<p>
+													A tour in Israel for all faiths. Is is opening a window over Israel’s past and present history, its
+                    people
+												</p>
+												<a href="#">Contact us for our latest offer!</a>
+											</div>
+										</div>
+										<div class="item-tours-sub__actions">
+											<div class="item-tours-sub__price">
+												Starting from USD
+												<span>$ 5,499</span>
+											</div>
+											<a href="#" class="item-tours-sub__button button button--blue">
+												Discover
+												<span class="pc">Now!</span>
+											</a>
+										</div>
+									</div>
+								</div>
+								<details class="tours-sub__info info-tours">
+									<summary class="info-tours__title _icon-ch-thin">Included with every group tours</summary>
+									<div class="info-tours__text text">
+										<ul>
+											<li>Group Is limited to 18 people only</li>
+											<li>Guarantee departure with 2 guests</li>
+											<li>Hand Picked English Speaking Tour Guide</li>
+											<li>Carefully Selected Accommodation</li>
+											<li>Airport meet and greet with transfers to the Hotel</li>
+											<li>Full breakfast daily. Optional dinners</li>
+											<li>One lunch by the Sea of Galilee</li>
+											<li>One night accommodation at Dead Sea Spa Hotel</li>
+											<li>All entrance fees and taxes</li>
+											<li>Original itinerary</li>
+											<li>Modern, new motor coach</li>
+											<li>Boat ride in Galilee Sea</li>
+										</ul>
+									</div>
+								</details>
+							</div>
+							<a href="#" class="tours-sub__button button button--blue">Start Your Journey</a>
 						</div>
 					</div>
 				</div>
